# vector

./: CMakeLists.txt  README.md
include/: vector.c
tests/: test_constructor.c  test_get.c  test_getters.c  test_insert.c  test_multiple_allocation.c  test_pop_back.c  test_pop_front.c  test_push_back.c  test_push_front.c  test_remove.c
